--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,22 @@
 <h1>The Jobs EJS Application</h1>
-<% if (errors) {
-    errors.forEach((err) => { %>
-    <div>Error: <%= err %></div>
-<% }) } 
-    if (info) {
-        info.forEach((msg) => { %>
-        <div>Info: <%= msg %></div>
-<% }) } %>
+<%if (user) { %>
+   <p>User <%= user.name %> is logged on.</p>
+   <form method="POST" action="/sessions/logoff">
+   <button>Logoff</button>
+   </form>
+<% } %>
+<% if (errors.length > 0) { %>
+    <% errors.forEach((err) => { %>
+      <div>
+        Error: <%= err %>
+      </div>
+    <% }) %>
+<% } %>
+<% if (info.length > 0) { %>
+    <% info.forEach((msg) => { %>
+      <div>
+        Info: <%= msg %>
+      </div>
+    <% }) %>
+<% } %>
 <hr />
