--- a/views/logon.ejs
+++ b/views/logon.ejs
@@ -8,6 +8,7 @@
   <div>
     <label name="password">Enter your password:</label>
     <input type="password" name="password" />
+    <input type="hidden" name="_csrf" value="<%= _csrf %>">
   </div>
   <div>
     <button>Logon</button>
