--- a/views/groceries.ejs
+++ b/views/groceries.ejs
@@ -1,23 +1,29 @@
+<%- include("partials/head.ejs") %>
+<%- include("partials/header.ejs") %>
 <h2>Groceries List</h2>
     <table id="groceries-table">
       <tr id="groceries-table-header">
         <th>Name</th>
-        <th>Added by</th>
         <th>Status</th>
         <th colspan="2"></th>
       </tr>
       <% if (groceries && groceries.length) { %>
         <% groceries.forEach((product) => { %>
-          <tr>
+        <tr>
+            <td colspan="2">
             <td><%= product.name %></td>
-            <td><%= product.addedby %></td>
             <td><%= product.status %></td>
-            <a href="/groceries/edit/<%= product.id %>"><button type="button">edit</button></a>
+            <a href="/groceries/update/<%= product.id %>"><button type="button">edit</button></a>
             <form method="POST" action="/groceries/delete/<%= product.id %>" style="display: inline">
                 <button>delete</button>
                 <input type="hidden" name="_csrf" value="<%= _csrf %>" />
             </form>
-          </tr>
+        </td>
+        </tr>
         <% }) %>
       <% } %>
+        <a href="/groceries/new">
+        <button type="button">create new product</button>
+        </a>
     </table>
+<%- include("partials/footer.ejs") %>
