--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,6 @@
   <div>
     <label name="password">Enter your password:</label>
     <input type="password" name="password" />
-    <input type="hidden" name="_csrf" value="<%= _csrf %>">
   </div>
   <div>
     <label name="password1">Confirm your password:</label>
@@ -20,7 +19,7 @@
     <input type="hidden" name="_csrf" value="<%= _csrf %>">
   </div>
   <div>
-    <button>Register</button>
+    <button type="submit">Register</button>
     <a href="/">
       <button type="button">Cancel</button>
     </a>
